src/test/deca/codegen/valid/test_asm.deca
// Description:
//    Programme testant la methode asm
//	  Etape(s) : A, B, C
// 	  Lexicalement : OUI
//	  Syntaxiquement : OUI
//	  Contextuellement : OUI
//
// Resultats:
//	ok
//
// Historique:
//    cree le 22/01/2021

class A {
	void Asm() asm(" WSTR \"ok \" \n WNL \n RTS" );
}
{
	A a = new A();
	a.Asm();
}